Set website pipeline to build on Windows build server

--- a/.azdo/pipelines/website-only-pipeline.yml
+++ b/.azdo/pipelines/website-only-pipeline.yml
@@ -4,6 +4,9 @@
 # ------------------------------------------------------------------------------------------------------------------------
 name: $(date:yyyy).$(date:MM).$(date:dd)$(rev:.r)
 
+pool:
+  vmImage: 'windows-latest'
+
 trigger:
   batch: true
   branches:
