--- a/.gitignore
+++ b/.gitignore
@@ -355,3 +355,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 infra/Bicep/Run_Deploy_Locally.ps1
+infra/Bicep/test/iothub_v2.bicep
