--- a/.azdo/pipelines/pipes/console-app-pipeline-template.yml
+++ b/.azdo/pipelines/pipes/console-app-pipeline-template.yml
@@ -7,6 +7,8 @@ parameters:
   default: ['DEV']
 - name: variableGroupName
   default: 'myVariableGroupName'
+- name: deployToStorage
+  default: 'false'
 
 # ------------------------------------------------------------------------------------------------------------------------
 stages:
@@ -19,11 +21,12 @@ stages:
       environmentName: 'DEV'
 
 # ----------------------------------------------------------------------------------------------------
-- ${{ each environmentName in parameters.environments }} :
-  - stage: DeploySimulator${{ environmentName }}
-    displayName: Deploy ${{ environmentName }} Simulator
-    jobs:
-    - template: templates/console-app-deploy-template.yml
-      parameters:
-        variableGroupName: ${{ parameters.variableGroupName }}
-        environmentName: ${{ environmentName }}
+- ${{ if eq(lower(parameters.deployToStorage), 'true') }}:
+  - ${{ each environmentName in parameters.environments }} :
+    - stage: DeploySimulator${{ environmentName }}
+      displayName: Deploy ${{ environmentName }} Simulator
+      jobs:
+      - template: templates/console-app-deploy-template.yml
+        parameters:
+          variableGroupName: ${{ parameters.variableGroupName }}
+          environmentName: ${{ environmentName }}
